# nomad-measurements

./: .gitignore  .gitmodules  404.html  CITATION.cff  MANIFEST.in  README.md  contact.html  index.html  mkdocs.yml  nomad.yaml  nomad_plugin_metadata.yaml  pyproject.toml
.github/workflows/: mkdocs-deploy.yml  python-test.yml
.metadata/: nomad_plugin_metadata.auto.yaml  nomad_plugin_metadata.manual.yaml  plugin-metadata.override-report.yaml
XRayDiffraction/: xrd.schema.archive.yaml
docs/: contact.md  index.md
docs/assets/: custom_schema.archive.yaml
docs/explanation/: explanation.md  levelsofschema.md  schemas.md  schemas_and_readers.md
docs/how_to/: develop.md  install.md  use_this_plugin.md
docs/reference/: references.md
docs/tutorial/: tutorial.md
explanation/: explanation.html  levelsofschema.html  schemas.html
how_to/: develop.html  install.html  use_this_plugin.html
nomad_measurements/: nomad_plugin.yaml
reference/: references.html
search/: search_index.json
src/nomad_measurements/: __init__.py  general.py  nomad_plugin.yaml  schema.py  utils.py
src/nomad_measurements/catalytic_measurement/: catalytic_measurement.py  nomad_plugin.yaml  schema.py
src/nomad_measurements/general/: __init__.py  schema.py
src/nomad_measurements/mapping/: __init__.py  schema.py
src/nomad_measurements/ppms/: README.md  __init__.py  nomad_plugin.yaml  parser.py  ppmsdatastruct.py  ppmsfunctions.py  ppmssteps.py  schema.py
src/nomad_measurements/ppms/PPMSdata/: nomad_plugin.yaml  parser.py
src/nomad_measurements/ppms/PPMSsequence/: __init__.py  nomad_plugin.yaml  parser.py
src/nomad_measurements/quantumdesign/: __init__.py  parser.py  qddatastruct.py  qdfunctions.py  qdsteps.py  schema.py
src/nomad_measurements/transmission/: __init__.py  nomad_plugin.yaml  parser.py  schema.py  utils.py
src/nomad_measurements/uvir/: nomad_plugin.yaml  schema.py
src/nomad_measurements/xrd/: IKZ.py  __init__.py  ikz.py  nomad_plugin.yaml  nx.py  parser.py  plotting.py  readers.py  schema.py  xrd_helper.py  xrd_parser.py
src/nomad_measurements/xrd/parser/: __init__.py  nomad_plugin.yaml  parser.py
src/nomad_measurements/xrf/: nomad_plugin.yaml  readers.py  schema.py
src/nomad_measurements/xrf/parser/: nomad_plugin.yaml  parser.py
src/nomad_measurements/xrf/parsers/: __init__.py  nomad_plugin.yaml  parser.py
tests/: conftest.py  test_first_utils.py  test_parser.py  test_parser_ppms.py  test_ppms.py  test_quantumdesign.py  test_readers.py  test_schema.py  test_transmission.py  test_utils.py  test_xrd.py
tests/data/: 23-012-AG_2thomegascan_long.archive.json  23-012-AG_2thomegascan_long.brml.json  EJZ060_13_004_RSM.brml.json  Omega-2Theta_scan_high_temperature.archive.json  Omega-2Theta_scan_high_temperature.rasx.json  RSM_111_sdd=350.archive.json  RSM_111_sdd=350.rasx.json  TwoTheta_scan_powder.archive.json  XRD-918-16_10.archive.json  XRD-918-16_10.xrdml  XRD-918-16_10.xrdml.h5  XRD-918-16_10.xrdml.json  XRF_UBIK_QNT20220823_A3_2m.txt  XRF_UBIK_QNT20220823_A3_2m.txt.json  XRF_UBIK_QNT20231115_A1_2m.txt  XRF_UBIK_QNT20231115_A1_2m.txt.json  XRF_UBIK_QNT20231115_A2_2m.txt  XRF_UIBK_OneElement.archive.json  XRF_UIBK_OneElement.txt  XRF_UIBK_OneElement.txt.json  XRF_UIBK_TwoElements.txt  XRF_UIBK_TwoElements.txt.json  m54313_om2th_10.archive.json  m82762_rc1mm_1_16dg_src_slit_phi-101_3dg_-420_mesh_long.xrdml.json  test_x_ray_diffraction.archive.yaml  test_xrd_result.archive.yaml
tests/data/quantumdesign/: ETO_Ch1_TMR_Ch2_Hall.seq
tests/data/test_hdf5_files/: XRD-918-16_10.hdf5
tests/data/transmission/: 3DM_test01.Probe.Raw.asc  F4-P3HT 1-10 0,5 mgml.Probe.Raw.asc  KTF-D.Probe.Raw.asc  Sample5926.Probe.Raw.asc  sphere_test01.Probe.Raw.asc
tests/data/xrd/: 23-012-AG_2thomegascan_long.brml  Omega-2Theta_scan_high_temperature.rasx  RSM_111_sdd=350.rasx  TwoTheta_scan_powder.rasx  TwoTheta_scan_scrambled.raw  m54313_om2th_10.xrdml  m82762_rc1mm_1_16dg_src_slit_phi-101_3dg_-420_mesh_long.xrdml  test_sample.raw
tests/transmission/: test_parser.py
tests/xrd/: test_hdf5.py  test_parser.py
tutorial/: tutorial.html
