[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
name = "nomad-measurements"
dynamic = ["version"]
description = "A plugin for NOMAD containing base sections for measurements."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andrea Albino" },
    { name = "Sebastian Brückner" },
    { name = "Sarthak Kapoor" },
    { name = "José A. Márquez" },
    { name = "Rubel Mozumder" },
    { name = "Hampus Näsström" },
    { email = "fairmat@physik.hu-berlin.de" },
]
maintainers = [
    { name = "FAIRmat", email = "fairmat@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab>=1.3.16dev",
    "pynxtools==0.9.3",
    "fairmat-readers-xrd>=0.0.7",
    "fairmat-readers-transmission>=0.0.2",
    "toposort", # pynxtools==0.9.3 depends on this, but does not define it as a dep.
    # this will be fixed in future version
    # TODO Remove `toposort` when `pyxtools` is updated
]
[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/nomad-measurements"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/nomad-measurements/issues"

[tool.uv]
index-url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "structlog",
    "python-logstash>=0.4.6",
]

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']

general_schema = "nomad_measurements:schema"
xrd_schema = "nomad_measurements.xrd:schema"
xrd_parser = "nomad_measurements.xrd:parser"
ppms_eto_schema = "nomad_measurements.ppms:eto_schema"
ppms_act_schema = "nomad_measurements.ppms:act_schema"
ppms_acms_schema = "nomad_measurements.ppms:acms_schema"
ppms_mpms_schema = "nomad_measurements.ppms:mpms_schema"
ppms_resisitivity_schema = "nomad_measurements.ppms:resistivity_schema"
ppms_eto_parser = "nomad_measurements.ppms:eto_parser"
ppms_act_parser = "nomad_measurements.ppms:act_parser"
ppms_acms_parser = "nomad_measurements.ppms:acms_parser"
ppms_mpms_parser = "nomad_measurements.ppms:mpms_parser"
ppms_resistivity_parser = "nomad_measurements.ppms:resistivity_parser"
ppms_sequence_parser = "nomad_measurements.ppms:sequence_parser"
transmission_schema = "nomad_measurements.transmission:schema"
transmission_parser = "nomad_measurements.transmission:parser"

[tool.setuptools_scm]